# dtw-lab

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: pr-openning.yaml
src/dtw_lab/: lab1.py  lab2.py
tests/: test_lab2.py
